# planet_quake_game

./: README.MD  XMLDump.xml
ETXreal/: CC-BY-SA Unported.txt  CHANGELOG.txt  COPYING.txt  CREDITS.txt  README.txt  premake4.lua  premake4_vs2010.bat  premake4_with-omnibot_vs2010.bat
Elite-Reinforce/: .gitignore  .gitmodules  EF_SPMod.sln  README.md
IS-HUD/: cg_consolecmds.c  cg_draw.c  cg_event.c  cg_local.h  cg_main.c  cg_scoreboard.c
RBQUAKE-3/: README.md
ShudSource15/: ShudSource_ReadMe.txt  cg_consolecmds.c  cg_draw.c  cg_event.c  cg_info.c  cg_local.h  cg_main.c  cg_playerstate.c  cg_predict.c  cg_scoreboard.c  cg_servercmds.c  cg_shudlog.c  cgame.q3asm
qfusion/source/client/: CMakeLists.txt  cl_demo.cpp  cl_game.cpp  cl_main.cpp  cl_mm.cpp  cl_mm.h  cl_parse.cpp  cl_screen.cpp  cl_sound.cpp  cl_ui.cpp  cl_vid.cpp  client.h  console.cpp  keys.cpp  serverlist.cpp  serverlist.h  snd_public.h  xpm.cpp
qfusion/source/game/: CMakeLists.txt  g_as_gametypes.cpp  g_as_local.h  g_as_maps.cpp  g_ascript.cpp  g_awards.cpp  g_callvotes.cpp  g_chase.cpp  g_clip.cpp  g_cmds.cpp  g_combat.cpp  g_frame.cpp  g_func.cpp  g_gameteams.cpp  g_gametypes.cpp  g_gametypes.h  g_items.cpp  g_local.h  g_main.cpp  g_misc.cpp  g_mm.cpp  g_phys.cpp  g_public.h  g_spawn.cpp  g_spawnpoints.cpp  g_svcmds.cpp  g_syscalls.cpp  g_syscalls.h  g_target.cpp  g_utils.cpp  g_weapon.cpp  p_client.cpp  p_hud.cpp  p_weapon.cpp
qfusion/source/game/ai/: AIComponent.cpp  AIComponent.h  Selection.h  ai.cpp  ai.h  ai_ascript.cpp  ai_base_ai.cpp  ai_base_ai.h  ai_ground_trace_cache.cpp  ai_ground_trace_cache.h  ai_local.h  ai_manager.cpp  ai_manager.h  ai_precomputed_file_handler.cpp  ai_trajectory_predictor.cpp  ai_trajectory_predictor.h  ai_weight_config.cpp  ai_weight_config.h  bot.cpp  bot.h  bot_evolution_manager.cpp  bot_weight_config.h  buffer_builder.h  static_vector.h  vec3.h
qfusion/source/game/ai/awareness/: AlertTracker.cpp  AlertTracker.h  AwarenessModule.cpp  AwarenessModule.h  EnemiesTracker.cpp  EnemiesTracker.h  EntitiesPvsCache.h  EventsTracker.cpp  EventsTracker.h  HazardsDetector.cpp  HazardsDetector.h  HazardsSelector.cpp  HazardsSelector.h  KeptInFovPointTracker.cpp  KeptInFovPointTracker.h  PathBlockingTracker.cpp  PathBlockingTracker.h  SelectedEnemies.cpp  SelectedEnemies.h
qfusion/source/game/ai/combat/: AdvantageProblemSolver.cpp  AdvantageProblemSolver.h  CoverProblemSolver.cpp  CoverProblemSolver.h  DodgeHazardProblemSolver.cpp  DodgeHazardProblemSolver.h  FireTargetCache.cpp  FireTargetCache.h  SideStepDodgeProblemSolver.cpp  SideStepDodgeProblemSolver.h  SpotsProblemSolversLocal.h  TacticalSpotsProblemSolver.cpp  TacticalSpotsProblemSolver.h  TacticalSpotsRegistry.cpp  TacticalSpotsRegistry.h  WeaponSelector.cpp  WeaponSelector.h  WeaponsUsageModule.cpp
qfusion/source/game/ai/movement/: BaseMovementAction.cpp  BaseMovementAction.h  BunnyHopAction.cpp  BunnyHopAction.h  BunnyTestingMultipleLookDirsAction.cpp  BunnyTestingMultipleLookDirsAction.h  BunnyTestingMultipleTurnsAction.cpp  BunnyTestingMultipleTurnsAction.h  BunnyTestingNextReachDirsAction.cpp  BunnyTestingNextReachDirsAction.h  BunnyToBestClusterPointAction.cpp  BunnyToBestClusterPointAction.h  BunnyToBestNavMeshPointAction.cpp  BunnyToBestNavMeshPointAction.h  BunnyToBestVisibleReachAction.cpp  BunnyToBestVisibleReachAction.h  BunnyToStairsOrRampExitAction.cpp  BunnyToStairsOrRampExitAction.h  CampASpotAction.cpp  CombatDodgeToTargetAction.cpp  CombatDodgeToTargetAction.h  EnvironmentTraceCache.cpp  EnvironmentTraceCache.h  FallDownScript.cpp  FallDownScript.h  FallbackMovementAction.cpp  FallbackMovementAction.h  FloorClusterAreasCache.cpp  FloorClusterAreasCache.h  GenericGroundMovementScript.cpp  GenericGroundMovementScript.h  JumpOverBarrierScript.cpp  JumpOverBarrierScript.h  JumpToSpotScript.cpp  JumpToSpotScript.h  LandOnSavedAreasAction.cpp  MovementLocal.cpp  MovementLocal.h  MovementModule.cpp  MovementModule.h  (+20 more)
qfusion/source/game/ai/navigation/: AasAreasWalker.h  AasElementsMask.cpp  AasElementsMask.h  AasRouteCache.cpp  AasRouteCache.h  AasWorld.cpp  AasWorld.h  NavMeshManager.cpp
qfusion/source/game/ai/planning/: Actions.cpp  Actions.h  AdvanceToGoodPositionAction.cpp  AttackAdvancingToTargetAction.cpp  AttackFromCurrentPositionAction.cpp  BotPlanner.cpp  BotPlanner.h  DodgeToSpotAction.cpp  FleeToSpotAction.cpp  GoalEntities.cpp  GoalEntities.h  Goals.cpp  Goals.h  GotoAvailablePositionAction.cpp  GotoRunAwayElevatorActions.cpp  GotoRunAwayJumppadActions.cpp  GotoRunAwayTeleportActions.cpp  ItemsSelector.cpp  ItemsSelector.h  KillEnemyAction.cpp  PickupNavEntityAction.cpp  Planner.cpp  Planner.h  PlanningLocal.h  PlanningModule.cpp  PlanningModule.h  Pool.h  PursuitActions.cpp  RetreatToGoodPositionAction.cpp  RoamingManager.cpp  RoamingManager.h  RunAwayAction.cpp  RunToNavEntityAction.cpp  StartGotoCoverAction.cpp  StopRunningAwayAction.cpp  TacticalSpotsCache.cpp  TacticalSpotsCache.h  TakeCoverAction.cpp  TurnToLostEnemyAction.cpp  TurnToThreatAction.cpp  (+3 more)
qfusion/source/game/ai/teamplay/: BaseTeam.cpp  BaseTeam.h  ObjectiveBasedTeam.cpp  ObjectiveBasedTeam.h  SquadBasedTeam.cpp  SquadBasedTeam.h  TeamplayLocal.h
qfusion/source/server/: CMakeLists.txt  server.h  sv_client.cpp  sv_demos.cpp  sv_game.cpp  sv_init.cpp  sv_main.cpp  sv_mm.cpp  sv_mm.h  sv_motd.cpp  sv_oob.cpp  sv_send.cpp  sv_web.cpp
qfusion/source/snd_openal/: CMakeLists.txt  qal.cpp  qal.h  snd_al.cpp  snd_allocators.cpp  snd_allocators.h  snd_buffers.cpp  snd_cached_computation.cpp  snd_cached_computation.h  snd_cmdque.cpp  snd_computation_host.cpp  snd_computation_host.h  snd_decoder_ogg.cpp  snd_decoder_wav.cpp  snd_effect_sampler.cpp  snd_effect_sampler.h  snd_effects_allocator.cpp  snd_effects_allocator.h  snd_env_effects.cpp  snd_env_effects.h  snd_env_sampler.cpp  snd_leaf_props_cache.cpp  snd_leaf_props_cache.h  snd_local.h  snd_main.cpp  snd_music.cpp  snd_presets_registry.cpp  snd_presets_registry.h  snd_propagation.cpp  snd_propagation.h  snd_raycast_sampler.cpp  snd_raycast_sampler.h  snd_sources.cpp  snd_stream.cpp
(+5469 files in other folders)
